--- a/.env.prod
+++ b/.env.prod
@@ -8,3 +8,5 @@ ROUTER_MODE = 'history'
 PROJECT_URL = '/font-pc-react'
 # 项目名称
 PROJECT_PC_NAME = '后台管理系统'
+# 接口地址前缀
+API_ROOT = 'https://api.github.com'
