--- a/package.json
+++ b/package.json
@@ -24,29 +24,32 @@
     "clean": "node ./scripts/index.js clean",
     "format": "npx prettier --write src"
   },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
+  },
   "dependencies": {
     "antd": "^5.4.2",
     "lib-flexible": "^0.3.2",
     "crypto-js": "^4.0.0",
     "mobx": "^5.15.7",
     "mobx-react-lite": "^2.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-fastclick": "^3.0.2",
-    "react-intl": "^5.18.3",
-    "react-router-dom": "^6.10.0",
+    "react-intl": "^7.0.4",
     "sm-crypto": "^0.3.12",
-    "typescript": "^4.3.2",
+    "typescript": "^5.7.2",
+    "@bale-web/request": "^0.1.6",
+    "@bale-wasm/http": "^0.1.1",
     "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.5",
-    "@bale-web/request": "^0.1.6"
+    "@types/react-dom": "^18.0.5"
   },
   "devDependencies": {
-    "@bale-tools/mutate-service": "^2.2.7",
-    "@bale-tools/mutate-minimize": "^1.0.6",
-    "@bale-tools/utils": "^2.0.5",
-    "@bale-tools/mutate-version": "^2.1.6",
-    "@bale-sprint/react": "^1.1.6",
+    "@bale-tools/utils": "^2.0.8",
+    "@bale-tools/mutate-minimize": "^1.0.7",
+    "@bale-tools/mutate-service": "^2.3.8",
+    "@bale-tools/mutate-version": "^2.3.3",
+    "@bale-sprint/react": "^1.2.1",
     "core-js": "3",
     "autoprefixer": "^10.4.13",
     "esno": "^0.16.3",
@@ -57,18 +60,17 @@
     "lint-staged": "^13.0.3",
     "jscpd": "^3.4.5",
     "babel-plugin-import": "^1.13.3",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-jsx-control-statements": "^2.2.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-control-statements": "^3.0.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "postcss-aspect-ratio-mini": "^1.1.0",
     "postcss-write-svg": "^3.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
-    "n-readlines": "^1.0.1"
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
+    "eslint-plugin-unused-imports": "^4.1.4"
   },
   "browserslist": [
     "> 1%",
