--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "prod": "node ./scripts/index.js prod",
     "simulate": "node ./scripts/index.js simulate",
     "clean": "node ./scripts/index.js clean",
-    "format": "npx prettier --write src"
+    "format": "npx prettier --write src",
+    "postinstall": "husky install && npx husky init && npm run examine",
+    "prepare": "husky",
+    "examine": "echo \"npx lint-staged\\nnpx commitlint --edit \\$1\" > .husky/pre-commit"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -54,10 +57,11 @@
     "autoprefixer": "^10.4.13",
     "esno": "^0.16.3",
     "cssnano": "^6.0.0",
-    "@commitlint/cli": "^12.1.4",
-    "husky": "^8.0.3",
-    "prettier": "^2.4.1",
-    "lint-staged": "^13.0.3",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "husky": "^9.1.7",
+    "prettier": "^3.5.2",
+    "lint-staged": "^15.4.3",
     "jscpd": "^3.4.5",
     "babel-plugin-import": "^1.13.3",
     "eslint": "^9.17.0",
@@ -80,12 +84,6 @@
     "Firefox >= 20",
     "Android > 4.4"
   ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
   "lint-staged": {
     "**/*.{vue,jsx,js,tsx,ts,json,css,md}": [
       "prettier --write"
