update(): 修改代码提交勾子

--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "Android > 4.4"
   ],
   "lint-staged": {
-    "**/*.{vue,jsx,js,tsx,ts,json,css,md}": [
+    "**/*.{vue,jsx,js,tsx,ts,json,css,md,less}": [
       "prettier --write"
     ],
     "**/*.{vue,jsx,js,tsx,ts}": [
