--- a/package.json
+++ b/package.json
@@ -33,48 +33,50 @@
     "react-router-dom": "^6.10.0"
   },
   "dependencies": {
+    "@bale-wasm/http": "^0.1.1",
+    "@bale-web/request": "^0.1.6",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
     "antd": "^5.4.2",
-    "lib-flexible": "^0.3.2",
     "crypto-js": "^4.0.0",
+    "lib-flexible": "^0.3.2",
     "mobx": "^5.15.7",
     "mobx-react-lite": "^2.2.2",
     "react-fastclick": "^3.0.2",
     "react-intl": "^7.0.4",
     "sm-crypto": "^0.3.12",
-    "typescript": "^5.7.2",
-    "@bale-web/request": "^0.1.6",
-    "@bale-wasm/http": "^0.1.1",
-    "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.5"
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
-    "@bale-tools/utils": "^2.0.8",
+    "@bale-sprint/react": "^1.2.1",
     "@bale-tools/mutate-minimize": "^1.0.7",
     "@bale-tools/mutate-service": "^2.3.8",
     "@bale-tools/mutate-version": "^2.3.3",
-    "@bale-sprint/react": "^1.2.1",
-    "core-js": "3",
-    "autoprefixer": "^10.4.13",
-    "esno": "^0.16.3",
-    "cssnano": "^6.0.0",
+    "@bale-tools/utils": "^2.0.8",
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
-    "husky": "^9.1.7",
-    "prettier": "^3.5.2",
-    "lint-staged": "^15.4.3",
-    "jscpd": "^3.4.5",
-    "babel-plugin-import": "^1.13.3",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsx-control-statements": "^3.0.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "postcss-aspect-ratio-mini": "^1.1.0",
-    "postcss-write-svg": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
-    "eslint-plugin-unused-imports": "^4.1.4"
+    "autoprefixer": "^10.4.13",
+    "babel-plugin-import": "^1.13.3",
+    "core-js": "3",
+    "cssnano": "^6.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "esno": "^0.16.3",
+    "husky": "^9.1.7",
+    "jscpd": "^3.4.5",
+    "lint-staged": "^15.4.3",
+    "postcss-aspect-ratio-mini": "^1.1.0",
+    "postcss-write-svg": "^3.0.1",
+    "prettier": "^3.5.2"
   },
   "browserslist": [
     "> 1%",
@@ -85,10 +87,10 @@
     "Android > 4.4"
   ],
   "lint-staged": {
-    "**/*.{vue,jsx,js,tsx,ts,json,css,md,less}": [
+    "src/**/*.{vue,jsx,js,tsx,ts,json,css,md,less}": [
       "prettier --write"
     ],
-    "**/*.{vue,jsx,js,tsx,ts}": [
+    "src/**/*.{vue,jsx,js,tsx,ts}": [
       "eslint --fix"
     ]
   }
