--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@bale-sprint/react": "^1.2.1",
     "@bale-tools/mutate-minimize": "^1.0.7",
     "@bale-tools/mutate-service": "^2.3.8",
-    "@bale-tools/mutate-version": "^2.3.3",
+    "@bale-tools/mutate-version": "^2.3.4",
     "@bale-tools/utils": "^2.0.8",
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
@@ -88,7 +88,7 @@
     "Android > 4.4"
   ],
   "lint-staged": {
-    "src/**/*.{vue,jsx,js,tsx,ts,json,css,md,less}": [
+    "src/**/*.{vue,jsx,js,tsx,ts,json,css,md}": [
       "prettier --write"
     ],
     "src/**/*.{vue,jsx,js,tsx,ts}": [
