--- a/.env.simulate
+++ b/.env.simulate
@@ -10,3 +10,5 @@ PROJECT_URL = '/font-pc-react'
 PROJECT_PC_NAME = '后台管理系统'
 # 接口地址前缀
 API_ROOT = 'https://api.github.com'
+#SM2 公钥
+SM2_PUBLIC_KEY = ''
