--- a/package.json
+++ b/package.json
@@ -18,66 +18,71 @@
   "scripts": {
     "copy": "node ./scripts/index.js copy",
     "start": "node ./scripts/index.js start",
-    "build": "node ./scripts/index.js dev",
+    "dev": "node ./scripts/index.js dev",
     "prod": "node ./scripts/index.js prod",
     "simulate": "node ./scripts/index.js simulate",
     "clean": "node ./scripts/index.js clean",
     "format": "npx prettier --write src",
-    "postinstall": "husky install && npx husky init && npm run examine",
-    "prepare": "husky",
-    "examine": "echo \"npx lint-staged\\nnpx commitlint --edit \\$1\" > .husky/pre-commit"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "updater": "node ./scripts/updater.js",
+    "test": "ava",
+    "report": "jscpd --pattern 'src/views/**/*.{vue,ts,js,tsx}'",
+    "postinstall": "husky && npx husky init && npm run examine",
+    "examine": "echo \"npx lint-staged \nnpx commitlint --edit \\$1\" > .husky/pre-commit",
+    "prepare": "husky"
   },
   "dependencies": {
-    "@bale-wasm/http": "^0.1.1",
-    "@bale-web/request": "^0.1.6",
-    "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
     "antd": "^5.4.2",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "crypto-js": "^4.0.0",
-    "lib-flexible": "^0.3.2",
     "mobx": "^5.15.7",
     "mobx-react-lite": "^2.2.2",
     "react-fastclick": "^3.0.2",
     "react-intl": "^7.0.4",
     "sm-crypto": "^0.3.12",
-    "typescript": "^5.7.2"
+    "typescript": "^5.8.2",
+    "@bale-web/request": "^0.1.6",
+    "@bale-wasm/http": "^0.1.1",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "tailwindcss": "^3.4.14",
+    "dayjs": "^1.11.13"
   },
   "devDependencies": {
-    "@bale-sprint/react": "^1.2.1",
-    "@bale-tools/mutate-minimize": "^1.0.7",
-    "@bale-tools/mutate-service": "^2.3.8",
-    "@bale-tools/mutate-version": "^2.3.6",
     "@bale-tools/utils": "^2.0.8",
-    "@commitlint/cli": "^19.7.1",
-    "@commitlint/config-conventional": "^19.7.1",
-    "@typescript-eslint/eslint-plugin": "^8.18.2",
-    "@typescript-eslint/parser": "^8.18.2",
-    "autoprefixer": "^10.4.13",
-    "babel-plugin-import": "^1.13.3",
+    "@bale-tools/mutate-minimize": "^1.0.7",
+    "@bale-tools/mutate-service": "^2.4.1",
+    "@bale-tools/mutate-version": "^2.3.9",
+    "@bale-sprint/react": "^1.2.2",
     "core-js": "3",
+    "autoprefixer": "^10.4.13",
+    "esno": "^0.16.3",
     "cssnano": "^6.0.0",
+    "@commitlint/cli": "^19.7.1",
+    "husky": "^9.1.7",
+    "prettier": "^3.5.2",
+    "lint-staged": "^15.4.3",
+    "jscpd": "^3.4.5",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^8.56.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^10.0.1",
-    "eslint-import-resolver-typescript": "^3.8.3",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-jsx-control-statements": "^3.0.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "esno": "^0.16.3",
-    "husky": "^9.1.7",
-    "jscpd": "^3.4.5",
-    "lint-staged": "^15.4.3",
     "postcss-aspect-ratio-mini": "^1.1.0",
     "postcss-write-svg": "^3.0.1",
-    "prettier": "^3.5.2"
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "ava": "^6.2.0",
+    "@commitlint/config-conventional": "^19.7.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "postcss-import": "^16.1.0"
   },
   "browserslist": [
     "> 1%",
