--- a/src/communal/config/system.toml
+++ b/src/communal/config/system.toml
@@ -4,3 +4,4 @@ NEED_ENCRYPT = false
 LOCAL_TOKEN_NAME = 'aQCajMNF(64#KgQM3S!8li$MU9uSGHEo'
 USER_TOKEN_NAME = '	z7$WT&5-*.HBONgdb90t$x-.c1D3krv7'
 TOKEN_NAME = 'token'
+TOKEN_EXPIRED_CODE = '-30001100'
