update(): 修改框架, 使用 tailwind.css, 重构页面和菜单

--- a/src/route/router.url.toml
+++ b/src/route/router.url.toml
@@ -4,6 +4,10 @@ HOME_URL = ''
 LOGIN_URL = '/login'
 NOT_FOUND_URL = '/404'
 
+[DASHBOARD]
+URL = '/'
+NAME = '工作台'
+
 # basic
 [BASIC_DATA]
 PREFIX_URL = '/basic'
