--- a/src/communal/config/system.toml
+++ b/src/communal/config/system.toml
@@ -3,5 +3,11 @@ NEED_SIGN = false
 NEED_ENCRYPT = false
 LOCAL_TOKEN_NAME = 'aQCajMNF(64#KgQM3S!8li$MU9uSGHEo'
 USER_TOKEN_NAME = '	z7$WT&5-*.HBONgdb90t$x-.c1D3krv7'
+USER_PHONE_NAME = '%PAIRoRWRM#mj8LvL%pTfcYzsDj#o!3!'
 TOKEN_NAME = 'token'
 TOKEN_EXPIRED_CODE = '-30001100'
+DB_NAME = 'FrontPcDB'
+DB_VERSION = '1'
+CONSTANT_DB_NAME = 'FrontPcVariables'
+CONSTANT_DB_VERSION  = '1'
+
