--- a/src/communal/config/system.toml
+++ b/src/communal/config/system.toml
@@ -11,3 +11,5 @@ DB_VERSION = '1'
 CONSTANT_DB_NAME = 'FrontPcVariables'
 CONSTANT_DB_VERSION  = '1'
 
+THEME_NAME = 'x=2mu5jvMOa0YvzhBQA7eU(%uo7+-qT4'
+
